--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap");
+body {
+  background-color: #080808;
+  font-family: "Josefin Sans", sans-serif;
+}
+.Header {
+  width: 100%;
+  background-color: #080800;
   text-align: center;
+  height: 70px;
+  box-shadow: rgba(230, 230, 230, 0.5) 0px 5px 15px;
+}
+.heading {
+  text-align: center;
+  line-height: 70px;
+  color: #fff;
+}
+.inputForm {
+  width: 100%;
+  text-align: center;
+  padding: 20px 0;
+}
+.inputForm input {
+  font-size: 16px;
+  padding: 8px;
+  margin: 0 20px;
+  font-family: "Josefin Sans", sans-serif;
+  bottom: 0;
+  outline: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.inputForm input.btn {
+  cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.tabelHead {
+  background: #000;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  border: 1px solid #fff;
+}
+p.f-bg {
+  background-color: #15192cc4;
+}
+.tabelHead p {
+  padding: 10px 0;
+  font-weight: bold;
+  width: 20%;
+  border-right: 2px solid #111;
+  border-left: 2px solid #111;
+  background-color: #fff;
+  color: #111;
+}
+section {
+  color: #fff;
+  width: 90%;
+  margin: auto;
+  text-align: start;
+  border-collapse: collapse;
+}
+.tabelData {
+  background: #000;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  border: 1px solid #fff;
 }
-
-.App-link {
-  color: #61dafb;
+.tabelData p {
+  padding: 10px 0;
+  font-weight: bold;
+  width: 20%;
+  overflow: hidden;
+  line-height: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cursor {
+  cursor: pointer;
 }
